<resources>
    <string name="app_name">JobIT</string>
    <string name="facebook_app_id">2157437357831317</string>
    <string name="fb_login_protocol_scheme">fb2157437357831317</string>
    <string name="tv_sign_up"><u>Sign Up?</u></string>
    <string name="tv_forgot_password"><u>Quên mật khẩu?</u></string>
    <string name="tv_change_user_type"><u>Chuyển đối chức năng</u></string>
    <string name="tv_Sign_in"><u>Đăng nhập</u></string>
    <string name="tv_version">Phiên bản </string>
    <string name="jobit">JobIT</string>
    <string name="hint_text">hint_text</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="motatiemkiem">Chức danh, từ khóa hoặc công ty</string>
    <string name="diadiem">Địa điểm</string>
    <string name="motadiadiem">tỉnh hoặc thành phố</string>
    <string name="TimViec">Tìm việc</string>
    <string name="DangNhap">Đăng nhập</string>
    <string name="Vieclamcuatoi">Việc làm của tôi</string>
    <string name="TaoCV">Tạo CV của bạn</string>
    <string name="taoCV">Tạo CV của bạn</string>
    <string name="motatxtNhanViec">Nhận email cập nhập mới nhất cho</string>
    <string name="motatieptxtNhanViec">Tuyên dụng, tìm việc làm android tại Ho Chi Minh City</string>
    <string name="btnNhanViec">Nhận việc làm mới mỗi ngày</string>
    <string name="txtNhaTuyenDung">Nhà tuyển dụng: Đăng việc làm</string>
    <string name="Test">Công ty ABC tuyển dụng nhân viên làm việc ngày 8 tiếng tiền lương thỏa thuân, không yêu cầu kinh nghiệm làm việc tại hồ chí minh.Công ty ABC tuyển dụng nhân viên làm việc ngày 8 tiếng tiền lương thỏa thuân, không yêu cầu kinh nghiệm làm việc tại hồ chí minh.Công ty ABC tuyển dụng nhân viên làm việc ngày 8 tiếng tiền lương thỏa thuân, không yêu cầu kinh nghiệm làm việc tại hồ chí minh.Công ty ABC tuyển dụng nhân viên làm việc ngày 8 tiếng tiền lương thỏa thuân, không yêu cầu kinh nghiệm làm việc tại hồ chí minh. Công ty ABC tuyển dụng nhân viên làm việc ngày 8 tiếng tiền lương thỏa thuân, không yêu cầu kinh nghiệm làm việc tại hồ chí minh. Công ty ABC tuyển dụng nhân viên làm việc ngày 8 tiếng tiền lương thỏa thuân, không yêu cầu kinh nghiệm làm việc tại hồ chí minh. Công ty ABC tuyển dụng nhân viên làm việc ngày 8 tiếng tiền lương thỏa thuân, không yêu cầu kinh nghiệm làm việc tại hồ chí minh.Công ty ABC tuyển dụng nhân viên làm việc ngày 8 tiếng tiền lương thỏa thuân, không yêu cầu kinh nghiệm làm việc tại hồ chí minh.Công ty ABC tuyển dụng nhân viên làm việc ngày 8 tiếng tiền lương thỏa thuân, không yêu cầu kinh nghiệm làm việc tại hồ chí minh.Công ty ABC tuyển dụng nhân viên làm việc ngày 8 tiếng tiền lương thỏa thuân, không yêu cầu kinh nghiệm làm việc tại hồ chí minh. </string>
    <string-array name="DanhSachLoaiHinhCongTy">
        <item>Công ty 100% vốn nước ngoài</item>
        <item>Công ty cá nhân</item>
        <item>Công ty đa quốc gia</item>
        <item>Công ty nhà nước</item>
        <item>Công ty cổ phần</item>
    </string-array>
    <string-array name="QuyMoCongTy">
        <item>Dưới 10 thành viên</item>
        <item>Từ 10 - 49 thành viên</item>
        <item>Từ 50 đến 99 thành viên</item>
        <item>Từ 100 thành viên trở lên</item>
    </string-array>
    <string-array name="TinhThanh">
        <item>Hồ Chí Minh</item>
        <item>Khánh Hòa</item>
        <item>Hà Nội</item>
        <item>Đà Nẵng</item>
    </string-array>

    <string-array name="searchs">
        <item>Android</item>
        <item>IOS</item>
        <item>JAVA</item>
        <item>.Net</item>
        <item>Developer</item>
        <item>Manager</item>
        <item>Bosch</item>
        <item>Fresher</item>
        <item>Manager</item>
        <item>FPT</item>
        <item>Mobile</item>
        <item>Swift</item>
        <item>Tester</item>
        <item>PHP</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
