<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".View.HomeJobSeeker.HomeJobSeekerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/txtJobIT"
                android:src="@drawable/jobit_text_blue"
                style="@style/StyleJobIT"
                android:layout_width="140dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/jobit" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTimKiem"
                    style="@style/Style_txtTK_DD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/timkiem" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/motatiemkiem"
                    android:textSize="15sp" />
            </LinearLayout>

            <com.google.android
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text"/>

            </com.google.android>

            <EditText
                android:id="@+id/edtTimKiem"
                style="@style/Style_edtTK_DD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_search" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDiaDiem"
                    style="@style/Style_txtTK_DD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/diadiem" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/motadiadiem"
                    android:textSize="15sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtDiaDiem"
                style="@style/Style_edtTK_DD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_edittext_tkiem_ddiem"
                android:drawableEnd="@drawable/ic_location" />

            <Button
                android:id="@+id/btnSearch"
                style="@style/Style_btnTimViec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/custom_button_search"
                android:text="@string/TimViec" />

            <Button
                android:id="@+id/btnDangNhap"
                style="@style/Style_btnCv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/custom_button_login_myjob_taocv"
                android:drawableStart="@drawable/ic_user"
                android:drawableEnd="@drawable/ic_next"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/DangNhap" />

            <Button
                android:id="@+id/btnAccount"
                style="@style/Style_btnCv"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button_login_myjob_taocv"
                android:drawableStart="@drawable/ic_user"
                android:drawableEnd="@drawable/ic_next"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:textStyle="bold"
                android:text="user name" />

            <Button
                android:id="@+id/btnMyJob"
                style="@style/Style_btnCv"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button_login_myjob_taocv"
                android:drawableStart="@drawable/ic_myjob"
                android:drawableEnd="@drawable/ic_next"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/Vieclamcuatoi" />

            <Button
                android:id="@+id/btnCV"
                style="@style/Style_btnCv"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button_login_myjob_taocv"
                android:drawableStart="@drawable/ic_cv"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_next"
                android:gravity="center_vertical"
                android:text="@string/TaoCV" />

            <Button
                android:id="@+id/btnChangeUserType"
                style="@style/Style_btnCv"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button_login_myjob_taocv"
                android:drawableStart="@drawable/ic_change"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_next"
                android:gravity="center_vertical"
                android:text="Chuyển đổi chức năng" />

            <Button
                android:id="@+id/btnSignOut"
                style="@style/Style_btnCv"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button_login_myjob_taocv"
                android:drawableStart="@drawable/ic_log_out"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/ic_next"
                android:text="Đăng xuất" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>